--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Dependencies
+      run: sudo apt-get install libsasl2-dev
     - name: Build
       run: cargo build
     - name: Format
