--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Dependencies
-      run: sudo apt-get install libsasl2-dev
-    - name: Build
-      run: cargo build
-    - name: Format
-      run: cargo fmt --check
-    - name: Run clippy
-      run: cargo clippy
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+    - uses: actions-rs/cargo@v1
+      with:
+        command: build
+        args: --all-features
+    - uses: actions-rs/cargo@v1
+      with:
+        command: fmt
+        args: --check
+    - uses: actions-rs/cargo@v1
+      with:
+        command: clippy
