--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Dependencies
+      run: sudo apt-get install -y libsasl2-dev
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
@@ -28,3 +30,4 @@ jobs:
     - uses: actions-rs/cargo@v1
       with:
         command: clippy
+        args: -Dwarnings
