--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,18 +16,22 @@ jobs:
     - uses: actions/checkout@v3
     - name: Dependencies
       run: sudo apt-get install -y libsasl2-dev
-    - uses: actions-rs/toolchain@v1
+    - name: Toolchain
+      uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-    - uses: actions-rs/cargo@v1
+    - name: Build
+      uses: actions-rs/cargo@v1
       with:
         command: build
         args: --all-features
-    - uses: actions-rs/cargo@v1
+    - name: Format
+      uses: actions-rs/cargo@v1
       with:
         command: fmt
         args: --check
-    - uses: actions-rs/cargo@v1
+    - name: Clippy
+      uses: actions-rs/cargo@v1
       with:
         command: clippy
-        args: -Dwarnings
+        args: -- -Dwarnings
