--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "kafka-proxy"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+description = "Service to proxy from various protocols to Kafka"
+license = "Apache-2.0"
+repository = "https://github.com/mkroli/kafka-proxy"
 
 [profile.release]
 strip = "symbols"
@@ -24,7 +27,7 @@ async-trait = "0.1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "net"] }
 tokio-stream = { version = "0.1", features = ["sync", "io-util"] }
 hyper = "0.14"
-axum = { version = "0.6", features = ["http1", "http2"] }
+axum = { version = "0.6", features = ["headers", "http1", "http2"] }
 coap = "0.12"
 coap-lite = "0.9"
 opentelemetry = "0.18"
