--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,10 @@ jobs:
         run: |
           sudo apt-get install -y libsasl2-dev
           cargo install cargo-release
+      - name: Git Config
+        run: |
+          git config --global user.name "Michael Krolikowski"
+          git config --global user.email "mkroli@yahoo.de"
       - name: Release
         uses: actions-rs/cargo@v1
         with:
