--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,4 +42,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: release
-          args: -x --no-confirm ${{ inputs.level }}
+          args: -x --no-confirm --no-publish ${{ inputs.level }}
