provide gh token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,3 +43,5 @@ jobs:
         with:
           command: release
           args: -x --no-confirm --no-publish ${{ inputs.level }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
