--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kafka-proxy"
-version = "0.1.0-dev.1"
+version = "0.1.0"
 edition = "2021"
 description = "Service to proxy from various protocols to Kafka"
 license = "Apache-2.0"
