--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ apache-avro = "0.14"
 schema_registry_converter = { version = "3.1", features = ["avro"] }
 rdkafka = { version = "0.29", features = ["cmake-build", "ssl", "gssapi", "zstd-pkg-config"] }
 async-trait = "0.1"
+futures = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "net"] }
 tokio-stream = { version = "0.1", features = ["sync", "io-util"] }
 hyper = "0.14"
