--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -38,14 +40,8 @@ jobs:
         run: |
           git config --global user.name "Michael Krolikowski"
           git config --global user.email "mkroli@yahoo.de"
-      - name: Clean
-        uses: actions-rs/cargo@v1
-        with:
-          command: clean
       - name: Release
         uses: actions-rs/cargo@v1
         with:
           command: release
           args: -x --no-confirm --no-publish ${{ inputs.level }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
