--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.PAT }}
       - name: Toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -45,6 +46,3 @@ jobs:
         with:
           command: release
           args: -x --no-confirm --no-publish ${{ inputs.level }}
-  container:
-    needs: release
-    uses: ./.github/workflows/container.yml
