--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@ panic = "abort"
 codegen-units = 1
 
 [dependencies]
+anyhow = "1"
 log = "0.4"
 fern = "0.6"
 chrono = "0.4"
-clap = { version = "4", features = ["derive"] }
-anyhow = "1"
+clap = { version = "4", features = ["derive", "env"] }
 serde_json = "1"
 apache-avro = "0.14"
 schema_registry_converter = { version = "3.1", features = ["avro"] }
