--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          target: ${{ matrix.target }}
       - name: Cross Installation
         run: cargo install cross
       - name: Build
