--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 description = "Service to proxy from various protocols to Kafka"
 license = "Apache-2.0"
 repository = "https://github.com/mkroli/kafka-proxy"
+readme = "README.md"
+authors = ["Michael Krolikowski"]
 
 [profile.release]
 strip = "symbols"
@@ -21,6 +23,7 @@ chrono = "0.4"
 clap = { version = "4", features = ["derive", "env"] }
 serde_json = "1"
 apache-avro = "0.14"
+openssl = { version = "0.10", features = ["vendored"] }
 schema_registry_converter = { version = "3.1", features = ["avro"] }
 rdkafka = { version = "0.29", features = ["cmake-build", "ssl", "gssapi", "zstd-pkg-config"] }
 async-trait = "0.1"
