--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,12 @@ repository = "https://github.com/mkroli/kafka-proxy"
 readme = "README.md"
 authors = ["Michael Krolikowski"]
 
+[package.metadata.cross.build]
+pre-build = [
+    "apt-get update",
+    "DEBIAN_FRONTEND=noninteractive apt-get install -qq cmake libsasl2-dev libzstd-dev"
+]
+
 [profile.release]
 strip = "symbols"
 opt-level = "s"
@@ -23,9 +29,9 @@ chrono = "0.4"
 clap = { version = "4", features = ["derive", "env"] }
 serde_json = "1"
 apache-avro = "0.14"
-openssl = { version = "0.10", features = ["vendored"] }
+# openssl = { version = "0.10", features = ["vendored"] }
 schema_registry_converter = { version = "3.1", features = ["avro"] }
-rdkafka = { version = "0.29", features = ["cmake-build", "ssl", "gssapi", "zstd-pkg-config"] }
+rdkafka = { version = "0.29", features = ["cmake-build", "libz-static", "ssl-vendored", "gssapi-vendored"] }
 async-trait = "0.1"
 futures = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "net"] }
