--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-gnu
-#          - x86_64-unknown-linux-musl
+          - x86_64-unknown-linux-musl
 #          - aarch64-unknown-linux-gnu
 #          - aarch64-unknown-linux-musl
 #          - armv7-unknown-linux-gnueabihf
