--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -5,6 +5,9 @@ on:
     tags: '*'
   workflow_dispatch:
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   build:
     name: Build (${{ matrix.target }})
@@ -14,10 +17,6 @@ jobs:
         target:
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
-#          - aarch64-unknown-linux-gnu
-#          - aarch64-unknown-linux-musl
-#          - armv7-unknown-linux-gnueabihf
-#          - armv7-unknown-linux-musleabihf
     steps:
       - name: Checkout
         uses: actions/checkout@v3
