--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,6 @@ jobs:
           ~/.cargo/git/db/
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-    - name: Dependencies
-      run: sudo apt-get install -y libsasl2-dev
     - name: Toolchain
       uses: actions-rs/toolchain@v1
       with:
@@ -35,7 +33,7 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: build
-        args: --all-features
+        args: --locked --all-features
     - name: Format
       uses: actions-rs/cargo@v1
       with:
