--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -21,6 +21,12 @@ jobs:
           - target: x86_64-unknown-linux-musl
             suffix: x86_64-linux-musl
             cargo: cross
+          - target: aarch64-unknown-linux-musl
+            suffix: aarch64-linux-musl
+            cargo: cross
+          - target: armv7-unknown-linux-musleabihf
+            suffix: armv7-linux-musleabihf
+            cargo: cross
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -38,5 +44,6 @@ jobs:
           mv target/${{ matrix.target }}/release/kafka-proxy kafka-proxy_${{ matrix.suffix }}
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: kafka-proxy_${{ matrix.suffix }}
