--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,19 @@ env.passthrough = [
     "ac_cv_func_regcomp=yes",
     "ac_cv_printf_positional=yes",
     "ac_cv_gssapi_supports_spnego=yes",
+    "CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_LINKER=/usr/local/musl/bin/armv7-unknown-linux-musleabihf-gcc",
+    "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=/usr/local/musl/bin/aarch64-unknown-linux-musl-gcc",
 ]
 xargo = false
 
 [package.metadata.cross.target.x86_64-unknown-linux-musl]
 image = "messense/rust-musl-cross:x86_64-musl"
+
+[package.metadata.cross.target.aarch64-unknown-linux-musl]
+image = "messense/rust-musl-cross:aarch64-musl"
+
+[package.metadata.cross.target.armv7-unknown-linux-musleabihf]
+image = "messense/rust-musl-cross:armv7-musleabihf"
 
 [profile.release]
 strip = "symbols"
