--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ codegen-units = 1
 anyhow = "1"
 log = "0.4"
 fern = "0.6"
-chrono = "0.4"
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
 clap = { version = "4", features = ["derive", "env"] }
 serde_json = "1"
 apache-avro = "0.14"
