--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,8 +41,12 @@ log = "0.4"
 fern = "0.6"
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 clap = { version = "4", features = ["derive", "env"] }
-serde_json = "1"
+serde = "1"
+serde_json = { version = "1", features = ["arbitrary_precision"] }
+base64 = "0.21"
+uuid = "1"
 apache-avro = "0.14"
+rust_decimal = { version = "1", features = ["serde-arbitrary-precision"] }
 schema_registry_converter = { version = "3.1", features = ["avro"] }
 rdkafka = { version = "0.29", features = ["cmake-build", "libz-static", "ssl-vendored", "gssapi-vendored"] }
 async-trait = "0.1"
