--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,16 +1,15 @@
-name: GH Release
+name: Build Release
 
 on:
   push:
     tags: '*'
-  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-    name: Build (${{ matrix.target }})
+    name: Release Artifact (${{ matrix.target }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -47,3 +46,29 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: kafka-proxy_${{ matrix.suffix }}
+
+  container:
+    name: Container Images
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup qemu
+        uses: docker/setup-qemu-action@v2
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: GitHub Container Registry Login
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            "ghcr.io/mkroli/kafka-proxy:latest"
+            "ghcr.io/mkroli/kafka-proxy:${{github.ref_name}}"
