--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -3,6 +3,7 @@ name: Build Release
 on:
   push:
     tags: '*'
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
@@ -50,6 +51,11 @@ jobs:
   container:
     name: Container Images
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch:
+          - linux/amd64
+          - linux/arm64
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -67,7 +73,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.arch }}
           push: true
           tags: |
             "ghcr.io/mkroli/kafka-proxy:latest"
