explicit linker for x86_64 musl

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ env.passthrough = [
     "ac_cv_gssapi_supports_spnego=yes",
     "CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_LINKER=/usr/local/musl/bin/armv7-unknown-linux-musleabihf-gcc",
     "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=/usr/local/musl/bin/aarch64-unknown-linux-musl-gcc",
+    "CARGO_TARGET_X86_64_UNKNOWN_LINUX_MUSL_LINKER=/usr/local/musl/bin/x86_64-unknown-linux-musl-gcc",
 ]
 xargo = false
 
