--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,8 +62,9 @@ async-trait = "0.1"
 futures = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "net"] }
 tokio-stream = { version = "0.1", features = ["sync", "io-util"] }
-hyper = "0.14"
-axum = { version = "0.6", features = ["headers", "http1", "http2"] }
+hyper = { version = "1", default-features = false, features = ["server", "http1", "http2"] }
+axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "http2"] }
+axum-extra = { version = "0.9", default-features = false, features = ["typed-header"] }
 coap = { version = "0.13", optional = true }
 coap-lite = { version = "0.11", optional = true }
 opentelemetry = "0.21"
