--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -31,9 +31,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Toolchain
-        uses: actions-rs/toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: stable
           target: ${{ matrix.target }}
       - name: Cross Installation
         run: cargo install cross
