--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,6 @@ hyper = { version = "1", default-features = false, features = ["server", "http1"
 axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "http2"] }
 axum-extra = { version = "0.9", default-features = false, features = ["typed-header"] }
 coap = { version = "0.17", optional = true }
-coap-lite = { version = "0.11", optional = true }
 opentelemetry = "0.22"
 opentelemetry_sdk = "0.22"
 prometheus = "0.13"
@@ -82,6 +81,6 @@ reqwest = "0.12"
 
 [features]
 default = ["coap", "posixmq", "nng"]
-coap = ["dep:coap", "dep:coap-lite"]
+coap = ["dep:coap"]
 posixmq = ["dep:posixmq"]
 nng = ["dep:nng"]
