--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ serde = "1"
 serde_json = { version = "1", features = ["arbitrary_precision"] }
 base64 = "0.22"
 uuid = "1"
-apache-avro = "0.19"
+apache-avro = "0.20"
 num-traits = "0.2"
 num-bigint = "0.4"
 bigdecimal = "0.4"
@@ -66,10 +66,7 @@ hyper = { version = "1", default-features = false, features = ["server", "http1"
 axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2"] }
 axum-extra = { version = "0.10", default-features = false, features = ["typed-header"] }
 coap = { version = "0.22", optional = true }
-opentelemetry = "0.29"
-opentelemetry_sdk = "0.29"
-prometheus = "0.14"
-opentelemetry-prometheus = "0.29"
+prometheus-client = "0.24"
 posixmq = { version = "1", optional = true }
 nng = { version = "1", optional = true }
 
