--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          components: rustfmt
       - name: Build
         run: cargo build --locked --all-features
       - name: Test
